[package]
name = "camrobot-controller"
version = "0.1.0"
authors = ["tajamaru"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = "0.31.0"
gilrs = "0.7.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
